# trustcheck-agent

./: .buildpacks  Aptfile  Cargo.toml  Dockerfile  Procfile  README.md  cargo.toml  pyproject.toml  requirements.txt
.cargo/: config.toml
spidercrawl/: Cargo.toml  pyproject.toml
spidercrawl/src/: crawler.rs  fetcher.rs  graph.rs  lib.rs
trustcheck_agent/: ai_judge.py  analyzer.py  main.py  models.py  screenshot.py  spider_crawler.py
